fix: Missing border

--- a/css/global.css
+++ b/css/global.css
@@ -34,7 +34,7 @@ a {
   color: black;
   border-radius: 20px;
   transition: 0.2s ease-in all;
-  border: 1px solid var(--accent-color);
+  border: none;
   cursor: pointer;
 }
 
